src/styles.scss
/* ... */
.url {
  position: relative;

  text-decoration: none;
  color: #FFFFFF;
  transition: all .2s;
  font-size: 1.5em;

  .tooltip {
    display: block;
    opacity: 0;
    pointer-events: none;
    position: absolute;
    bottom: 130%;
    transition: all .2s;

    height: 20px;
    width: auto;
    min-width: 5.55em;

    background: rgba(#000000, 1);
    border: 1px solid #FFFFFF;
    border-radius: 4px;

    .tooltip-text {
      position: absolute;
      top: -13px;
      text-align: center;
      width: 100%;

      font-size: 13px;
      line-height: 20px;
      font-weight: 400!important;
    }

    &:after {
      position: absolute;
      border-right: 6px solid transparent;
      border-top: 6px solid rgba(#FFFFFF,1); 
      border-left: 6px solid transparent;
      content: '';
      height: 0;
      top: 100%;
      left: 10px;
      width: 0;
    }
  }

  .icon-shadow {
    position: absolute;
    top:0;
    height: 1em;
    width: 1em;
    background: rgba(#FFFFFF, 1);
    opacity: 0;
    filter: blur(20px);
    transition: all .2s;
  }

  &:hover {

    .tooltip {
      opacity: .5;
    }

    .icon-shadow {
      opacity: .3;
    }
  }

}

.link-no-decoration {
  text-decoration: none;
}

.link {
  a {
    text-decoration: none;
    font-weight: 500;
    font-size: 2.4em;
    line-height: 1.333em;
    text-align: center;
    color: #FFFFFF;
    transition: all .2s;

    &.underlined {
      color: #C9C9C9;
      text-decoration: underline;
    }

    &:hover {
      text-decoration: underline;
    }
  }
}

.dot {
  display: inline-block;
  margin-right: 20px;
  height: 15px;
  width: 15px;
  background: #289ACC;
}

/* width */
::-webkit-scrollbar {
  width: 0px;
  background: #000; 
  color: #000;
}

/* Track */
::-webkit-scrollbar-track {
  background: #000; 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #000; 
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #000; 
}

//AGENDA TABS

tr:first-of-type .css-1gyktb4.Cell-horizontalCell {
  border-bottom: 1px solid #353535 !important;
  border-top: 1px solid #353535 !important;
}

.MuiTableBody-root {
  .MuiTableRow-root {
    &:nth-child(19), &:nth-child(20), &:nth-child(21), &:nth-child(22) {
      display: none;
    }
  }
}

.MuiTableCell-root {
  .Label-label {
    &:nth-child(19), &:nth-child(20), &:nth-child(21), &:nth-child(22) {
      display: none;
    }
  }
}

.MainLayout-background, .MainLayout-stickyElement, .MainLayout-ordinaryLeftPanelBorder {
  background: #000 !important;
  border-color: #353535 !important;
  table {
    td {
      .Cell-text {
        color: #fff !important;
        border-color: #353535 !important;
        // border-top: 1px solid #353535 !important;
      }
    }
  }
}

.Cell-cell {
  border-color: #353535 !important;
}

.css-v2eb78-MuiTableCell-root.Cell-cell {
  border-color: #353535 !important;
}

.css-ed9vzd .MainLayout-stickyElement {
  background: #000 !important;
  border-color: #353535 !important;
}


.css-xtpogp.Cell-cel {
  border-color: #353535 !important;
}

.css-1m1e8dc.Cell-brightRightBorder {
  display: none !important;
}

.Label-label .Label-emptyLabel .css-1fbp63r {
  display: none !important;
}

.css-18tcpub-MuiTableCell-root.Cell-cell:hover {
  background-color: #000 !important;
}

.css-6eykea-MuiTable-root.Table-table, .css-v0nkty-MuiTable-root.Table-table, .css-nxsm2j.Table-table {
  min-width: 1200px !important;
}

.css-1ps6pg7-MuiPaper-root, .css-1my4mrz .MainLayout-background, .css-1my4mrz .MainLayout-stickyElement {
  background-color: #000 !important;
}

.css-1my4mrz .MainLayout-header {
  z-index: 200 !important;
}

.css-5g40bp-MuiTableCell-root .Cell-text {
  color: #fff !important;
  font-weight: 300 !important;
}

.css-xtpogp {
  .Cell-text {
    color: #fff !important;
    font-weight: 300 !important;
  }
}

.css-1my4mrz .MainLayout-brightLeftPanelBorder, .css-1gyktb4.Cell-cell {
  // border: none !important;
  z-index: 100 !important;
  border-right: 1px solid #353535 !important;
}

.css-1e3b25u.Cell-brightRightBorder {
  display: none !important;
}

.css-1my4mrz .MainLayout-brightHeaderBorder {
  border-bottom: none !important;
}

.css-1j1oqrw {
  border-color: #353535 !important;
}

.css-18tcpub-MuiTableCell-root.Cell-cell, .css-ngju2w-MuiTableCell-root.Cell-cell, .css-5g40bp-MuiTableCell-root.Cell-cell {
  border: 1px solid #353535 !important;
  &:hover {
    background-color: #000 !important;
  }
}

.css-1gyktb4 .Cell-text {
  color:  #fff !important;
  font-weight: 400 !important;
}

.css-aoeo82 {
  background-color: #000 !important;
}

.css-1my4mrz .MainLayout-ordinaryHeaderBorder {
  border: none !important;
}

.css-1my4mrz .MainLayout-ordinaryLeftPanelBorder {
  border-right: 1px solid #353535 !important;
}

.css-xd4oto-MuiTableCell-root, .css-f8q0de.TickCell-cell {
  border-bottom: 1px solid #353535 !important;
}

.VerticalAppointment-content {
  height: 100% !important;
  width: 100% !important;
}

.Cell-text {
  // font-size: 3.8em !important;
  // line-height: 1.1666em !important;
  width: 100% !important;
  text-align: center!important;
}
.Cell-horizontalCell {
  border-top: 1px solid #353535 !important;
}

.css-1675apn-MuiTableCell-root {
  display: none !important;
}

.MuiTableCell-root {
  height: 100px !important;
  .Label-emptyLabel {
    display: none !important;
  }
  .Label-label {
    height: 100px !important;
    width: 120px !important;
    overflow: initial !important;
    position: relative !important;
    .Label-text {
      font-size: 1.4em !important;
      color: #fff !important;
      position: absolute !important;
      bottom: 33px !important;
      right: 10px !important;
    }
  }
}
.css-9q0p2j-MuiTable-root {
  height: 100px !important;
}
/* ... */

